tests/sema/fail/v10_fail_i64_literal_range.ep
# COMPILE_FAIL_CONTAINS: integer literal 9223372036854775808 out of range for i64

fun run(): i64 {
    ret 9223372036854775808
}

fun main(): void {
    exit(run())
}
